@@ -109,12 +109,12 @@ heading_content = { check_ifnots ?/(.|\n)/? } * ;
 
 (* SEMANTICS: Negative lookaheads to prevent inline elements from
    swallowing up the heading terminator (see check_ifnots).  *)
-push_no_h6 = () ; (* "======[ \t]*(?:<!--((?!-->).|\n)*(-->|$))?[ \t]*(\n|$)" *)
-push_no_h5 = () ; (* "=====[ \t]*(?:<!--((?!-->).|\n)*(-->|$))?[ \t]*(\n|$)" *)
-push_no_h4 = () ; (* "====[ \t]*(?:<!--((?!-->).|\n)*(-->|$))?[ \t]*(\n|$)" *)
-push_no_h3 = () ; (* "===[ \t]*(?:<!--((?!-->).|\n)*(-->|$))?[ \t]*(\n|$)" *)
-push_no_h2 = () ; (* "==[ \t]*(?:<!--((?!-->).|\n)*(-->|$))?[ \t]*(\n|$)" *)
-push_no_h1 = () ; (* "=[ \t]*(?:<!--((?!-->).|\n)*(-->|$))?[ \t]*(\n|$)" *)
+push_no_h6 = () ; (* "======([ \t]*(?:<!--((?!-->).|\n)*(-->|$)))*[ \t]*(\n|$)" *)
+push_no_h5 = () ; (* "=====([ \t]*(?:<!--((?!-->).|\n)*(-->|$)))*[ \t]*(\n|$)" *)
+push_no_h4 = () ; (* "====([ \t]*(?:<!--((?!-->).|\n)*(-->|$)))*[ \t]*(\n|$)" *)
+push_no_h3 = () ; (* "===([ \t]*(?:<!--((?!-->).|\n)*(-->|$)))*[ \t]*(\n|$)" *)
+push_no_h2 = () ; (* "==([ \t]*(?:<!--((?!-->).|\n)*(-->|$)))*[ \t]*(\n|$)" *)
+push_no_h1 = () ; (* "=([ \t]*(?:<!--((?!-->).|\n)*(-->|$)))*[ \t]*(\n|$)" *)
 
 
 (* Horizontal Rule Block
