@@ -12,7 +12,7 @@ from __future__ import print_function, division, absolute_import, unicode_litera
 from grako.parsing import * # @UnusedWildImport
 from grako.exceptions import * # @UnusedWildImport
 
-__version__ = '13.308.05.24.21'
+__version__ = '13.309.04.19.25'
 
 class mwParser(Parser):
     def __init__(self, whitespace='', nameguard=False, **kwargs):
